--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".activity.BookmarkActivity"/>
         <activity android:name=".activity.MoreActivity"/>
         
+        <activity android:name=".activity.PinnedHeaderListDemoActivity" />
     </application>
 
 </manifest>
