--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,11 @@
         android:minSdkVersion="9"
         android:targetSdkVersion="17" />
 
-    <application
+    <uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	
+    <application android:name=".common.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
